--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="content banner">
             <h1 class="learn">Learn something new everyday</h1>
             <h3 class="what">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-            <button><a href="#">Start here</a></button>
+            <button><a href="#" class="none">Start here</a></button>
           </div>
 
        </section>
