--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
 
       <div class="logo">
-        <img src="./resources/images/ic-logo.svg" alt="logo">
+        <img src="./resources/images/ic-logo.svg" alt="Colmaracademy">
         <span><span class="name">COLMAR</span>ACADEMY</span>
       </div>
       <nav class="nav">
