--- a/index.html
+++ b/index.html
@@ -103,24 +103,65 @@
         <div class="pictures">
           <div class="picture">
             <img src="./resources/images/course-software.jpg">
+            <div class="courses-info">
+              <h3>Software engineering</h3>
+              <span class="course">Courses</span>
+              <p> Web Development, Mobile</p>
+              <p> Web Development, iOT, APIs</a>
+            </div>
           </div>
+
           <div class="picture middle">
             <img src="./resources/images/course-computer-art.jpg">
+            <div class="courses-info">
+              <h3>Softwar engineering</h3>
+              <span class="course">Courses</span>
+              <p> Web Development, Mobile</p>
+              <p> Web Development, iOT, APIs</a>
+            </div>
           </div>
+
           <div class="picture">
             <img src="./resources/images/course-design.jpg">
+            <div class="courses-info">
+              <h3>Softwar engineering</h3>
+              <span class="course">Courses</span>
+              <p> Web Development, Mobile</p>
+              <p> Web Development, iOT, APIs</a>
+            </div>
           </div>
+
         </div>
         <div class="pictures">
           <div class="picture">
             <img src="./resources/images/course-data.jpg">
+            <div class="courses-info">
+              <h3>Softwar engineering</h3>
+              <span class="course">Courses</span>
+              <p> Web Development, Mobile</p>
+              <p> Web Development, iOT, APIs</a>
+            </div>
           </div>
+
           <div class="picture middle">
             <img src="./resources/images/course-business.jpg">
+            <div class="courses-info">
+              <h3>Softwar engineering</h3>
+              <span class="course">Courses</span>
+              <p> Web Development, Mobile</p>
+              <p> Web Development, iOT, APIs</a>
+            </div>
           </div>
           <div class="picture">
             <img src="./resources/images/course-marketing.jpg">
+            <div class="courses-info">
+              <h3>Softwar engineering</h3>
+              <span class="course">Courses</span>
+              <p> Web Development, Mobile</p>
+              <p> Web Development, iOT, APIs</a>
+            </div>
           </div>
+
          </div>
 
        </section>
