--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="picture middle">
             <img src="./resources/images/course-computer-art.jpg">
             <div class="courses-info">
-              <h3>Softwar engineering</h3>
+              <h3>Computer Art</h3>
               <span class="course">Courses</span>
               <p> Web Development, Mobile</p>
               <p> Web Development, iOT, APIs</a>
@@ -124,7 +124,7 @@
           <div class="picture">
             <img src="./resources/images/course-design.jpg">
             <div class="courses-info">
-              <h3>Softwar engineering</h3>
+              <h3>Design</h3>
               <span class="course">Courses</span>
               <p> Web Development, Mobile</p>
               <p> Web Development, iOT, APIs</a>
@@ -136,7 +136,7 @@
           <div class="picture">
             <img src="./resources/images/course-data.jpg">
             <div class="courses-info">
-              <h3>Softwar engineering</h3>
+              <h3>Data</h3>
               <span class="course">Courses</span>
               <p> Web Development, Mobile</p>
               <p> Web Development, iOT, APIs</a>
@@ -146,7 +146,7 @@
           <div class="picture middle">
             <img src="./resources/images/course-business.jpg">
             <div class="courses-info">
-              <h3>Softwar engineering</h3>
+              <h3>Business</h3>
               <span class="course">Courses</span>
               <p> Web Development, Mobile</p>
               <p> Web Development, iOT, APIs</a>
@@ -155,7 +155,7 @@
           <div class="picture">
             <img src="./resources/images/course-marketing.jpg">
             <div class="courses-info">
-              <h3>Softwar engineering</h3>
+              <h3>Marketing</h3>
               <span class="course">Courses</span>
               <p> Web Development, Mobile</p>
               <p> Web Development, iOT, APIs</a>
