--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
 
+<div class="main-container">
     <!-- header section-->
+    <h1> TESTTEST
+TESTTESTTESTTESTTEST</h1>
+
     <header>
 
       <div class="logo">
@@ -220,6 +224,7 @@
       </nav>
     </footer>
 
+</div>
 
   </body>
 </html>
