--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
   </head>
   <body>
 
-<div class="main-container">
     <!-- header section-->
-    <h1> TESTTEST
-TESTTESTTESTTESTTEST</h1>
-
     <header>
 
       <div class="logo">
@@ -34,10 +30,10 @@ TESTTESTTESTTESTTEST</h1>
 
       <!--1st gray/banner section  -->
 
-      <section class="section gray-one">
+      <section class="section gray">
 
         <div class="column">
-          <div class="pic-container pic banner">
+          <div class="image container">
             <img src="./resources/images/banner.jpg">
           </div>
         </div>
@@ -51,10 +47,10 @@ TESTTESTTESTTESTTEST</h1>
 
       <!--1st white/information section-->
 
-      <section class="section white-one">
+      <section class="section white">
 
           <div class="column">
-            <div class="pic-container pic">
+            <div class="image container">
               <img src="./resources/images/information-main.jpg">
             </div>
             <div class="description">
@@ -101,7 +97,7 @@ TESTTESTTESTTESTTEST</h1>
 
       <!--2nd gray/picture gallery section-->
 
-      <section class="section gray-two">
+      <section class="section gray two">
 
         <h1 class="headline">Start learning</h1>
         <div class="pictures">
@@ -171,12 +167,12 @@ TESTTESTTESTTESTTEST</h1>
        </section>
 
       <!-- 2nd white/information section -->
-      <section class="section white-two">
+      <section class="section white two">
 
         <h1 class="headline">Thesis exhibit</h1>
           <div class="adjust">
-            <div class="column two">
-              <video class="pic-container pic video" controls>
+            <div class="column">
+              <video class="image container" controls>
                 <source src="./resources/videos/thesis.mp4" type="video/mp4">
                   You browser does not support HTML5 video
               </video>
@@ -224,7 +220,6 @@ TESTTESTTESTTESTTEST</h1>
       </nav>
     </footer>
 
-</div>
 
   </body>
 </html>
