--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@
 
       <section class="section gray">
 
-        <div class="column">
-          <div class="image container">
-            <img src="./resources/images/banner.jpg">
+        <div class="adjust">
+          <div class="column">
+            <div class="image container">
+              <img src="./resources/images/banner.jpg">
+            </div>
           </div>
-        </div>
-          <div class="content banner">
-            <h1 class="learn">Learn something new everyday</h1>
-            <h3 class="what">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-            <button><a href="#" class="none">Start here</a></button>
+            <div class="content banner">
+              <h1 class="learn">Learn something new everyday</h1>
+              <h3 class="what">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+              <button><a href="#" class="none">Start here</a></button>
+            </div>
           </div>
 
        </section>
@@ -49,6 +51,7 @@
 
       <section class="section white">
 
+        <div class="adjust">
           <div class="column">
             <div class="image container">
               <img src="./resources/images/information-main.jpg">
@@ -92,7 +95,7 @@
               </div>
             </div>
           </div>
-
+        </div>
       </section>
 
       <!--2nd gray/picture gallery section-->
@@ -182,7 +185,7 @@
               </div>
             </div>
 
-            <div class="content two">
+            <div class="content">
               <div class="teaser fisma">
                 <div class="pic-info">
                     <img src="./resources/images/thesis-fisma.jpg">
