--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 
       <section class="section gray">
 
-        <div class="adjust">
-          <div class="column">
-            <div class="image container">
+        <div class="container">
+          <div class="asset">
+            <div class="image">
               <img src="./resources/images/banner.jpg">
             </div>
           </div>
             <div class="content banner">
-              <h1 class="learn">Learn something new everyday</h1>
-              <h3 class="what">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-              <button><a href="#" class="none">Start here</a></button>
+                <h1 class="learn">Learn something new everyday</h1>
+                <h3 class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+                <button><a href="#" class="">Start here</a></button>
             </div>
           </div>
 
@@ -51,9 +51,9 @@
 
       <section class="section white">
 
-        <div class="adjust">
-          <div class="column">
-            <div class="image container">
+        <div class="container">
+          <div class="asset">
+            <div class="image">
               <img src="./resources/images/information-main.jpg">
             </div>
             <div class="description">
@@ -173,9 +173,9 @@
       <section class="section white two">
 
         <h1 class="headline">Thesis exhibit</h1>
-          <div class="adjust">
-            <div class="column">
-              <video class="image container" controls>
+          <div class="container">
+            <div class="asset">
+              <video class="image" controls>
                 <source src="./resources/videos/thesis.mp4" type="video/mp4">
                   You browser does not support HTML5 video
               </video>
@@ -185,7 +185,7 @@
               </div>
             </div>
 
-            <div class="content">
+            <div class="content two">
               <div class="teaser fisma">
                 <div class="pic-info">
                     <img src="./resources/images/thesis-fisma.jpg">
