--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <!-- header section-->
+    <!-- header & nav section-->
     <header>
 
       <div class="logo">
@@ -39,9 +39,9 @@
             </div>
           </div>
             <div class="content banner">
-                <h1 class="learn">Learn something new everyday</h1>
-                <h3 class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-                <button><a href="#" class="">Start here</a></button>
+              <h1 class="">Learn something new everyday</h1>
+              <h3 class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+              <button><a href="#" class="none">Start here</a></button>
             </div>
           </div>
 
@@ -103,69 +103,68 @@
       <section class="section gray two">
 
         <h1 class="headline">Start learning</h1>
-        <div class="pictures">
-          <div class="picture">
-            <img src="./resources/images/course-software.jpg">
-            <div class="courses-info">
-              <h3>Software engineering</h3>
-              <span class="course">Courses</span>
-              <p> Web Development, Mobile</p>
-              <p> Web Development, iOT, APIs</a>
+          <div class="pictures">
+            <div class="picture">
+              <img src="./resources/images/course-software.jpg">
+              <div class="courses-info">
+                <h3>Software engineering</h3>
+                <span class="course">Courses</span>
+                <p> Web Development, Mobile</p>
+                <p> Web Development, iOT, APIs</a>
+              </div>
             </div>
-          </div>
 
-          <div class="picture middle">
-            <img src="./resources/images/course-computer-art.jpg">
-            <div class="courses-info">
-              <h3>Computer Art</h3>
-              <span class="course">Courses</span>
-              <p> Web Development, Mobile</p>
-              <p> Web Development, iOT, APIs</a>
+            <div class="picture middle">
+              <img src="./resources/images/course-computer-art.jpg">
+              <div class="courses-info">
+                <h3>Computer Art</h3>
+                <span class="course">Courses</span>
+                <p> Web Development, Mobile</p>
+                <p> Web Development, iOT, APIs</a>
+              </div>
             </div>
-          </div>
 
-          <div class="picture">
-            <img src="./resources/images/course-design.jpg">
-            <div class="courses-info">
-              <h3>Design</h3>
-              <span class="course">Courses</span>
-              <p> Web Development, Mobile</p>
-              <p> Web Development, iOT, APIs</a>
+            <div class="picture">
+              <img src="./resources/images/course-design.jpg">
+              <div class="courses-info">
+                <h3>Design</h3>
+                <span class="course">Courses</span>
+                <p> Web Development, Mobile</p>
+                <p> Web Development, iOT, APIs</a>
+              </div>
             </div>
           </div>
+          <div class="pictures">
+            <div class="picture">
+              <img src="./resources/images/course-data.jpg">
+              <div class="courses-info">
+                <h3>Data</h3>
+                <span class="course">Courses</span>
+                <p> Web Development, Mobile</p>
+                <p> Web Development, iOT, APIs</a>
+              </div>
+            </div>
 
-        </div>
-        <div class="pictures">
-          <div class="picture">
-            <img src="./resources/images/course-data.jpg">
-            <div class="courses-info">
-              <h3>Data</h3>
-              <span class="course">Courses</span>
-              <p> Web Development, Mobile</p>
-              <p> Web Development, iOT, APIs</a>
+            <div class="picture middle">
+              <img src="./resources/images/course-business.jpg">
+              <div class="courses-info">
+                <h3>Business</h3>
+                <span class="course">Courses</span>
+                <p> Web Development, Mobile</p>
+                <p> Web Development, iOT, APIs</a>
+              </div>
             </div>
-          </div>
+            <div class="picture">
+              <img src="./resources/images/course-marketing.jpg">
+              <div class="courses-info">
+                <h3>Marketing</h3>
+                <span class="course">Courses</span>
+                <p> Web Development, Mobile</p>
+                <p> Web Development, iOT, APIs</a>
+              </div>
+            </div>
 
-          <div class="picture middle">
-            <img src="./resources/images/course-business.jpg">
-            <div class="courses-info">
-              <h3>Business</h3>
-              <span class="course">Courses</span>
-              <p> Web Development, Mobile</p>
-              <p> Web Development, iOT, APIs</a>
-            </div>
-          </div>
-          <div class="picture">
-            <img src="./resources/images/course-marketing.jpg">
-            <div class="courses-info">
-              <h3>Marketing</h3>
-              <span class="course">Courses</span>
-              <p> Web Development, Mobile</p>
-              <p> Web Development, iOT, APIs</a>
-            </div>
-          </div>
-
-         </div>
+           </div>
 
        </section>
 
@@ -175,7 +174,7 @@
         <h1 class="headline">Thesis exhibit</h1>
           <div class="container">
             <div class="asset">
-              <video class="image" controls>
+              <video class="" controls>
                 <source src="./resources/videos/thesis.mp4" type="video/mp4">
                   You browser does not support HTML5 video
               </video>
@@ -185,7 +184,7 @@
               </div>
             </div>
 
-            <div class="content two">
+            <div class="content">
               <div class="teaser fisma">
                 <div class="pic-info">
                     <img src="./resources/images/thesis-fisma.jpg">
