--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Colmar Academy</title>
   </head>
   <body>
+  <div id="main-container">
 
     <!-- header & nav section-->
     <header>
@@ -26,191 +27,187 @@
     </header>
 
     <!-- main section-->
-    <main>
-
       <!--1st gray/banner section  -->
 
-      <section class="section gray">
+    <section class="section gray">
 
-        <div class="container">
-          <div class="asset">
-            <div class="image">
-              <img src="./resources/images/banner.jpg">
+      <div class="container">
+        <div class="asset">
+          <div class="image">
+            <img src="./resources/images/banner.jpg">
+          </div>
+        </div>
+          <div class="content learn-something">
+            <h1 class="">Learn something new everyday</h1>
+            <h3 class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+            <button><a href="#" class="none">Start here</a></button>
+          </div>
+        </div>
+
+     </section>
+
+    <!--1st white/information section-->
+
+    <section class="section white">
+
+      <div class="container">
+        <div class="asset">
+          <div class="image">
+            <img src="./resources/images/information-main.jpg">
+          </div>
+          <div class="description">
+            <h1>It doesn't hurt to keep practicing</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <span> Emanuel, Sr. Strategist at Hiring.com</span>
+          </div>
+         </div>
+
+        <div class="content">
+          <div class="dates orientation">
+            <div class="pic">
+                <img src="./resources/images/information-orientation.jpg">
+            </div>
+            <div class="info">
+              <h3> Orientation Date </h3>
+              <h4>Tue10/11 & </br>Wed 10/12: 8am-3pm</p>
+              <span><a href="#">Read more</a></span>
             </div>
           </div>
-            <div class="content banner">
-              <h1 class="">Learn something new everyday</h1>
-              <h3 class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-              <button><a href="#" class="none">Start here</a></button>
+          <div class="dates campus">
+            <div class="pic">
+                <img src="./resources/images/information-campus.jpg">
+            </div>
+            <div class="info">
+              <h3> Open Campus </h3>
+              <h4>Tue10/11 & </br>Wed 10/12: 8am-3pm</p>
+              <span><a href="#">Read more</a></span>
+            </div>
+          </div>
+          <div class="dates guest">
+            <div class="pic">
+                <img src="./resources/images/information-guest-lecture.jpg">
+            </div>
+            <div class="info">
+              <h3> Guest Speaker </h3>
+              <h4>Tue10/11 & </br>Wed 10/12: 8am-3pm</p>
+              <span><a href="#">Read more</a></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--2nd gray/picture gallery section-->
+
+    <section class="section gray second">
+
+      <h2 class="">Start learning</h1>
+        <div class="pictures">
+          <div class="picture">
+            <img src="./resources/images/course-software.jpg">
+            <div class="courses-info">
+              <h3>Software engineering</h3>
+              <span class="course">Courses</span>
+              <p> Web Development, Mobile</p>
+              <p> Web Development, iOT, APIs</a>
             </div>
           </div>
 
-       </section>
+          <div class="picture middle">
+            <img src="./resources/images/course-computer-art.jpg">
+            <div class="courses-info">
+              <h3>Computer Art</h3>
+              <span class="course">Courses</span>
+              <p> Web Development, Mobile</p>
+              <p> Web Development, iOT, APIs</a>
+            </div>
+          </div>
 
-      <!--1st white/information section-->
+          <div class="picture">
+            <img src="./resources/images/course-design.jpg">
+            <div class="courses-info">
+              <h3>Design</h3>
+              <span class="course">Courses</span>
+              <p> Web Development, Mobile</p>
+              <p> Web Development, iOT, APIs</a>
+            </div>
+          </div>
+        </div>
+        <div class="pictures">
+          <div class="picture">
+            <img src="./resources/images/course-data.jpg">
+            <div class="courses-info">
+              <h3>Data</h3>
+              <span class="course">Courses</span>
+              <p> Web Development, Mobile</p>
+              <p> Web Development, iOT, APIs</a>
+            </div>
+          </div>
 
-      <section class="section white">
+          <div class="picture center">
+            <img src="./resources/images/course-business.jpg">
+            <div class="courses-info">
+              <h3>Business</h3>
+              <span class="course">Courses</span>
+              <p> Web Development, Mobile</p>
+              <p> Web Development, iOT, APIs</a>
+            </div>
+          </div>
+          <div class="picture">
+            <img src="./resources/images/course-marketing.jpg">
+            <div class="courses-info">
+              <h3>Marketing</h3>
+              <span class="course">Courses</span>
+              <p> Web Development, Mobile</p>
+              <p> Web Development, iOT, APIs</a>
+            </div>
+          </div>
 
+         </div>
+
+     </section>
+
+    <!-- 2nd white/information section -->
+    <section class="section white second">
+
+      <h2 class="">Thesis exhibit</h1>
         <div class="container">
           <div class="asset">
-            <div class="image">
-              <img src="./resources/images/information-main.jpg">
-            </div>
+            <video class="" controls>
+              <source src="./resources/videos/thesis.mp4" type="video/mp4">
+                You browser does not support HTML5 video
+            </video>
             <div class="description">
               <h1>It doesn't hurt to keep practicing</h1>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-              <span> Emanuel, Sr. Strategist at Hiring.com</span>
             </div>
-           </div>
+          </div>
 
           <div class="content">
-            <div class="teaser orientation">
-              <div class="pic-info">
-                  <img src="./resources/images/information-orientation.jpg">
+            <div class="dates fisma">
+              <div class="pic">
+                  <img src="./resources/images/thesis-fisma.jpg">
               </div>
               <div class="info">
-                <h3> Orientation Date </h3>
+                <h3> Fisma </h3>
                 <p>Tue10/11 & Wed 10/12: 8am-3pm</p>
                 <span><a href="#">Read more</a></span>
               </div>
             </div>
-            <div class="teaser campus">
-              <div class="pic-info">
-                  <img src="./resources/images/information-campus.jpg">
+            <div class="dates now-and-then">
+              <div class="pic">
+                  <img src="./resources/images/thesis-now-and-then.jpg">
               </div>
               <div class="info">
-                <h3> Open Campus </h3>
-                <p>Tue10/11 & Wed 10/12: 8am-3pm</p>
-                <span><a href="#">Read more</a></span>
-              </div>
-            </div>
-            <div class="teaser guest">
-              <div class="pic-info">
-                  <img src="./resources/images/information-guest-lecture.jpg">
-              </div>
-              <div class="info">
-                <h3> Guest Speaker </h3>
+                <h3> Now-and-then </h3>
                 <p>Tue10/11 & Wed 10/12: 8am-3pm</p>
                 <span><a href="#">Read more</a></span>
               </div>
             </div>
           </div>
         </div>
+
       </section>
-
-      <!--2nd gray/picture gallery section-->
-
-      <section class="section gray two">
-
-        <h1 class="headline">Start learning</h1>
-          <div class="pictures">
-            <div class="picture">
-              <img src="./resources/images/course-software.jpg">
-              <div class="courses-info">
-                <h3>Software engineering</h3>
-                <span class="course">Courses</span>
-                <p> Web Development, Mobile</p>
-                <p> Web Development, iOT, APIs</a>
-              </div>
-            </div>
-
-            <div class="picture middle">
-              <img src="./resources/images/course-computer-art.jpg">
-              <div class="courses-info">
-                <h3>Computer Art</h3>
-                <span class="course">Courses</span>
-                <p> Web Development, Mobile</p>
-                <p> Web Development, iOT, APIs</a>
-              </div>
-            </div>
-
-            <div class="picture">
-              <img src="./resources/images/course-design.jpg">
-              <div class="courses-info">
-                <h3>Design</h3>
-                <span class="course">Courses</span>
-                <p> Web Development, Mobile</p>
-                <p> Web Development, iOT, APIs</a>
-              </div>
-            </div>
-          </div>
-          <div class="pictures">
-            <div class="picture">
-              <img src="./resources/images/course-data.jpg">
-              <div class="courses-info">
-                <h3>Data</h3>
-                <span class="course">Courses</span>
-                <p> Web Development, Mobile</p>
-                <p> Web Development, iOT, APIs</a>
-              </div>
-            </div>
-
-            <div class="picture middle">
-              <img src="./resources/images/course-business.jpg">
-              <div class="courses-info">
-                <h3>Business</h3>
-                <span class="course">Courses</span>
-                <p> Web Development, Mobile</p>
-                <p> Web Development, iOT, APIs</a>
-              </div>
-            </div>
-            <div class="picture">
-              <img src="./resources/images/course-marketing.jpg">
-              <div class="courses-info">
-                <h3>Marketing</h3>
-                <span class="course">Courses</span>
-                <p> Web Development, Mobile</p>
-                <p> Web Development, iOT, APIs</a>
-              </div>
-            </div>
-
-           </div>
-
-       </section>
-
-      <!-- 2nd white/information section -->
-      <section class="section white two">
-
-        <h1 class="headline">Thesis exhibit</h1>
-          <div class="container">
-            <div class="asset">
-              <video class="" controls>
-                <source src="./resources/videos/thesis.mp4" type="video/mp4">
-                  You browser does not support HTML5 video
-              </video>
-              <div class="description">
-                <h1>It doesn't hurt to keep practicing</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-              </div>
-            </div>
-
-            <div class="content">
-              <div class="teaser fisma">
-                <div class="pic-info">
-                    <img src="./resources/images/thesis-fisma.jpg">
-                </div>
-                <div class="info">
-                  <h3> Fisma </h3>
-                  <p>Tue10/11 & Wed 10/12: 8am-3pm</p>
-                  <span><a href="#">Read more</a></span>
-                </div>
-              </div>
-              <div class="teaser now-and-then">
-                <div class="pic-info">
-                    <img src="./resources/images/thesis-now-and-then.jpg">
-                </div>
-                <div class="info">
-                  <h3> Now-and-then </h3>
-                  <p>Tue10/11 & Wed 10/12: 8am-3pm</p>
-                  <span><a href="#">Read more</a></span>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </section>
-
-      </main>
 
     <!-- Footer section-->
 
@@ -222,6 +219,6 @@
       </nav>
     </footer>
 
-
+  </div>
   </body>
 </html>
