--- a/index.html
+++ b/index.html
@@ -31,17 +31,15 @@
 
     <section class="section gray">
 
-      <div class="container">
-        <div class="asset">
-          <div class="image">
-            <img src="./resources/images/banner.jpg">
-          </div>
+      <div class="asset">
+        <div class="image">
+          <img src="./resources/images/banner.jpg">
         </div>
-          <div class="content learn-something">
-            <h1 class="">Learn something new everyday</h1>
-            <h3 class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-            <button><a href="#" class="none">Start here</a></button>
-          </div>
+      </div>
+        <div class="content learn-something">
+          <h1 class="">Learn something new everyday</h1>
+          <h3 class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+          <button><a href="#" class="none">Start here</a></button>
         </div>
 
      </section>
@@ -50,7 +48,7 @@
 
     <section class="section white">
 
-      <div class="container">
+
         <div class="asset">
           <div class="image">
             <img src="./resources/images/information-main.jpg">
@@ -94,7 +92,7 @@
             </div>
           </div>
         </div>
-      </div>
+
     </section>
 
     <!--2nd gray/picture gallery section-->
@@ -102,69 +100,82 @@
     <section class="section gray second">
 
       <h2 class="">Start learning</h1>
+
         <div class="pictures">
-          <div class="picture">
-            <img src="./resources/images/course-software.jpg">
+          <div class="picture-container">
+            <div class="picture">
+              <img src="./resources/images/course-software.jpg">
+            </div>
             <div class="courses-info">
               <h3>Software engineering</h3>
               <span class="course">Courses</span>
               <p> Web Development, Mobile</p>
-              <p> Web Development, iOT, APIs</a>
+              <p> Web Development, iOT, APIs</p>
             </div>
           </div>
 
-          <div class="picture middle">
-            <img src="./resources/images/course-computer-art.jpg">
+          <div class="picture-container center">
+            <div class="picture">
+              <img src="./resources/images/course-computer-art.jpg">
+            </div>
             <div class="courses-info">
               <h3>Computer Art</h3>
               <span class="course">Courses</span>
-              <p> Web Development, Mobile</p>
-              <p> Web Development, iOT, APIs</a>
+              <p> Imaging & Design, Web Design,</p>
+              <p> Motion Grafphics & Visula Effects,</p>
+              <p> Computer Animation <p>
             </div>
           </div>
 
-          <div class="picture">
-            <img src="./resources/images/course-design.jpg">
+          <div class="picture-container">
+            <div class="picture">
+              <img src="./resources/images/course-design.jpg">
+            </div>
             <div class="courses-info">
               <h3>Design</h3>
               <span class="course">Courses</span>
-              <p> Web Development, Mobile</p>
-              <p> Web Development, iOT, APIs</a>
+              <p> User Experience Design, User</p>
+              <p> Research, Visual Design</p>
             </div>
           </div>
-        </div>
-        <div class="pictures">
-          <div class="picture">
-            <img src="./resources/images/course-data.jpg">
+
+          <div class="picture-container">
+            <div class="picture">
+              <img src="./resources/images/course-data.jpg">
+            </div>
             <div class="courses-info">
               <h3>Data</h3>
               <span class="course">Courses</span>
-              <p> Web Development, Mobile</p>
-              <p> Web Development, iOT, APIs</a>
+              <p> Data Science, Big Data, SQL, Data</p>
+              <p> Visualization</p>
             </div>
           </div>
 
-          <div class="picture center">
-            <img src="./resources/images/course-business.jpg">
+          <div class="picture-container center">
+            <div class="picture">
+              <img src="./resources/images/course-business.jpg">
+            </div>
             <div class="courses-info">
               <h3>Business</h3>
               <span class="course">Courses</span>
-              <p> Web Development, Mobile</p>
-              <p> Web Development, iOT, APIs</a>
+              <p> Product Development, Business</p>
+              <p> Development, Startup</p>
             </div>
           </div>
-          <div class="picture">
-            <img src="./resources/images/course-marketing.jpg">
+
+          <div class="picture-container">
+            <div class="picture">
+              <img src="./resources/images/course-marketing.jpg">
+            </div>
             <div class="courses-info">
               <h3>Marketing</h3>
               <span class="course">Courses</span>
-              <p> Web Development, Mobile</p>
-              <p> Web Development, iOT, APIs</a>
+              <p> Analystics, Content Marketing,</p>
+              <p> Mobile Marketing</p>
             </div>
-          </div>
+           </div>
 
          </div>
-
      </section>
 
     <!-- 2nd white/information section -->
@@ -205,8 +216,8 @@
               </div>
             </div>
           </div>
-        </div>
 
+        </div>
       </section>
 
     <!-- Footer section-->
