--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <title>Colmar Academy</title>
   </head>
   <body>
+
+  <!-- Top Level Div for viewport width at 100%-->
   <div id="main-container">
 
     <!-- header & nav section-->
     <header>
 
       <div class="logo">
-        <img src="./resources/images/ic-logo.svg" alt="Colmaracademy">
+        <img src="./resources/images/ic-logo.svg" alt="Colmar Academy Company Logo">
         <span><span class="name">COLMAR</span>ACADEMY</span>
       </div>
       <nav class="nav">
@@ -23,6 +25,15 @@
         <span><a href="#">For companies</a></span>
         <span><a href="#">Sign in</a></span>
       </nav>
+
+      <!-- nav mobile -->
+
+      <div class="icons">
+        <img src="./resources/images/ic-logo.svg" alt="Colmar Academy Company Logo">
+        <img src="./resources/images/ic-on-campus.svg" alt="Desk Icon">
+        <img src="./resources/images/ic-online.svg" alt="Computer Monitor Icon">
+        <img src="./resources/images/ic-login.svg" alt="Person Icon/Login">
+      </div>
 
     </header>
 
@@ -55,7 +66,7 @@
           </div>
           <div class="description">
             <h1>It doesn't hurt to keep practicing</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500.</p>
             <span> Emanuel, Sr. Strategist at Hiring.com</span>
           </div>
          </div>
@@ -63,31 +74,34 @@
         <div class="content">
           <div class="dates orientation">
             <div class="pic">
-                <img src="./resources/images/information-orientation.jpg">
+                <img class="desktop"src="./resources/images/information-orientation.jpg" alt="Students walking on campus in autumn">
+                <img class="mobile" src="./resources/images/information-orientation-mobile.jpg" alt="Students walking on campus in autumn">
             </div>
             <div class="info">
               <h3> Orientation Date </h3>
-              <h4>Tue10/11 & </br>Wed 10/12: 8am-3pm</p>
+              <h4>Tue10/11 & Wed 10/12: 8am-3pm</p>
               <span><a href="#">Read more</a></span>
             </div>
           </div>
           <div class="dates campus">
             <div class="pic">
-                <img src="./resources/images/information-campus.jpg">
+                <img class="desktop" src="./resources/images/information-campus.jpg" alt="Students studying in cafeteria">
+                <img class="mobile" src="./resources/images/information-campus-mobile.jpg" alt="Students studying in cafeteria">
             </div>
             <div class="info">
-              <h3> Open Campus </h3>
-              <h4>Tue10/11 & </br>Wed 10/12: 8am-3pm</p>
+              <h3>Our Campus</h3>
+              <h4>Find which campus is colse by you</p>
               <span><a href="#">Read more</a></span>
             </div>
           </div>
           <div class="dates guest">
             <div class="pic">
-                <img src="./resources/images/information-guest-lecture.jpg">
+                <img class="desktop" src="./resources/images/information-guest-lecture.jpg" alt="Picture of lecturer Oliver Sack">
+                <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="Picture of lecturer Oliver Sack">
             </div>
             <div class="info">
-              <h3> Guest Speaker </h3>
-              <h4>Tue10/11 & </br>Wed 10/12: 8am-3pm</p>
+              <h3>Our guest Lecture</h3>
+              <h4>Join a keynote with Oliver Sack</br>about Music in medical treatment</p>
               <span><a href="#">Read more</a></span>
             </div>
           </div>
@@ -101,7 +115,7 @@
 
       <h2 class="">Start learning</h1>
 
-        <div class="pictures">
+        <div class="courses">
           <div class="picture-container">
             <div class="picture">
               <img src="./resources/images/course-software.jpg">
@@ -176,6 +190,13 @@
            </div>
 
          </div>
+         <div class="courses-mobile">
+           <h3>Marketing</h3>
+           <span class="course">Courses</span>
+           <p> Analystics, Content Marketing,</p>
+           <p> Mobile Marketing</p>
+         </div>
+
      </section>
 
     <!-- 2nd white/information section -->
