--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="./resources/images/ic-logo.svg" alt="Colmar Academy Company Logo">
         <span><span class="name">COLMAR</span>ACADEMY</span>
       </div>
-      <nav class="nav">
+      <nav class="nav header">
         <span><a href="#">On campus</a></span>
         <span><a href="#">Online</a></span>
         <span><a href="#">For companies</a></span>
@@ -29,16 +29,15 @@
       <!-- nav mobile -->
 
       <div class="icons">
-        <img src="./resources/images/ic-logo.svg" alt="Colmar Academy Company Logo">
-        <img src="./resources/images/ic-on-campus.svg" alt="Desk Icon">
-        <img src="./resources/images/ic-online.svg" alt="Computer Monitor Icon">
-        <img src="./resources/images/ic-login.svg" alt="Person Icon/Login">
+        <img a href="#" src="./resources/images/ic-logo.svg" alt="Colmar Academy Company Logo">
+        <img a href="#" src="./resources/images/ic-on-campus.svg" alt="Desk Icon">
+        <img a href="#" src="./resources/images/ic-online.svg" alt="Computer Monitor Icon">
+        <img a href="#" src="./resources/images/ic-login.svg" alt="Person Icon/Login">
       </div>
 
     </header>
 
-    <!-- main section-->
-      <!--1st gray/banner section  -->
+    <!--1st gray/banner section  -->
 
     <section class="section gray">
 
@@ -47,10 +46,12 @@
           <img src="./resources/images/banner.jpg">
         </div>
       </div>
-        <div class="content learn-something">
-          <h1 class="">Learn something new everyday</h1>
-          <h3 class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-          <button><a href="#" class="none">Start here</a></button>
+        <div class="content border">
+          <div class="learn-something">
+            <h1 class="">Learn something new everyday</h1>
+            <h3 class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+            <button><a href="#" class="none">Start here</a></button>
+          </div>
         </div>
 
      </section>
@@ -60,7 +61,7 @@
     <section class="section white">
 
 
-        <div class="asset">
+        <div class="asset hide">
           <div class="image">
             <img src="./resources/images/information-main.jpg">
           </div>
@@ -72,38 +73,46 @@
          </div>
 
         <div class="content">
-          <div class="dates orientation">
+          <div class="events orientation">
+
             <div class="pic">
-                <img class="desktop"src="./resources/images/information-orientation.jpg" alt="Students walking on campus in autumn">
-                <img class="mobile" src="./resources/images/information-orientation-mobile.jpg" alt="Students walking on campus in autumn">
+              <img class="desktop"src="./resources/images/information-orientation.jpg" alt="Students walking on campus in autumn">
+              <img class="mobile" src="./resources/images/information-orientation-mobile.jpg" alt="Students walking on campus in autumn">
             </div>
             <div class="info">
               <h3> Orientation Date </h3>
-              <h4>Tue10/11 & Wed 10/12: 8am-3pm</p>
+              <h4>Tue10/11 & Wed 10/12: 8am-3pm</h4>
               <span><a href="#">Read more</a></span>
             </div>
+
           </div>
-          <div class="dates campus">
+          <div class="events campus">
+
             <div class="pic">
-                <img class="desktop" src="./resources/images/information-campus.jpg" alt="Students studying in cafeteria">
-                <img class="mobile" src="./resources/images/information-campus-mobile.jpg" alt="Students studying in cafeteria">
+              <img class="desktop" src="./resources/images/information-campus.jpg" alt="Students studying in cafeteria">
+              <img class="mobile" src="./resources/images/information-campus-mobile.jpg" alt="Students studying in cafeteria">
             </div>
             <div class="info">
               <h3>Our Campus</h3>
-              <h4>Find which campus is colse by you</p>
+              <h4>Find which campus is colse by you</h4>
               <span><a href="#">Read more</a></span>
             </div>
+
           </div>
-          <div class="dates guest">
+
+          <div class="events guest">
             <div class="pic">
-                <img class="desktop" src="./resources/images/information-guest-lecture.jpg" alt="Picture of lecturer Oliver Sack">
-                <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="Picture of lecturer Oliver Sack">
+              <img class="desktop" src="./resources/images/information-guest-lecture.jpg" alt="Picture of lecturer Oliver Sack">
+              <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="Picture of lecturer Oliver Sack">
             </div>
             <div class="info">
-              <h3>Our guest Lecture</h3>
-              <h4>Join a keynote with Oliver Sack</br>about Music in medical treatment</p>
+              <h3>Our Guest Lecture</h3>
+              <h4>Join a keynote with Oliver Sack about Music in medical treatment</h4>
               <span><a href="#">Read more</a></span>
             </div>
+
+            </div>
+
           </div>
         </div>
 
@@ -113,14 +122,14 @@
 
     <section class="section gray second">
 
-      <h2 class="">Start learning</h1>
+      <h2 class="headline">Start learning</h1>
 
         <div class="courses">
           <div class="picture-container">
             <div class="picture">
               <img src="./resources/images/course-software.jpg">
             </div>
-            <div class="courses-info">
+            <div class="course-info">
               <h3>Software engineering</h3>
               <span class="course">Courses</span>
               <p> Web Development, Mobile</p>
@@ -132,7 +141,7 @@
             <div class="picture">
               <img src="./resources/images/course-computer-art.jpg">
             </div>
-            <div class="courses-info">
+            <div class="course-info">
               <h3>Computer Art</h3>
               <span class="course">Courses</span>
               <p> Imaging & Design, Web Design,</p>
@@ -145,7 +154,7 @@
             <div class="picture">
               <img src="./resources/images/course-design.jpg">
             </div>
-            <div class="courses-info">
+            <div class="course-info">
               <h3>Design</h3>
               <span class="course">Courses</span>
               <p> User Experience Design, User</p>
@@ -157,7 +166,7 @@
             <div class="picture">
               <img src="./resources/images/course-data.jpg">
             </div>
-            <div class="courses-info">
+            <div class="course-info">
               <h3>Data</h3>
               <span class="course">Courses</span>
               <p> Data Science, Big Data, SQL, Data</p>
@@ -169,7 +178,7 @@
             <div class="picture">
               <img src="./resources/images/course-business.jpg">
             </div>
-            <div class="courses-info">
+            <div class="course-info">
               <h3>Business</h3>
               <span class="course">Courses</span>
               <p> Product Development, Business</p>
@@ -181,7 +190,7 @@
             <div class="picture">
               <img src="./resources/images/course-marketing.jpg">
             </div>
-            <div class="courses-info">
+            <div class="course-info">
               <h3>Marketing</h3>
               <span class="course">Courses</span>
               <p> Analystics, Content Marketing,</p>
@@ -191,48 +200,62 @@
 
          </div>
          <div class="courses-mobile">
-           <h3>Marketing</h3>
-           <span class="course">Courses</span>
-           <p> Analystics, Content Marketing,</p>
-           <p> Mobile Marketing</p>
-         </div>
+           <div class="course-info">
+             <h3>Software engineering</h3>
+           </div>
+           <div class="course-info">
+             <h3>Computer Art</h3>
+           </div>
+           <div class="course-info">
+             <h3>Design</h3>
+           </div>
+           <div class="course-info">
+             <h3>Data</h3>
+           </div>
+           <div class="course-info">
+             <h3>Business</h3>
+           </div>
+           <div class="course-info">
+             <h3>Marketing</h3>
+           </div>
 
+         </div>
      </section>
 
     <!-- 2nd white/information section -->
     <section class="section white second">
 
-      <h2 class="">Thesis exhibit</h1>
+      <h2 class="headline2">Thesis exhibit</h1>
         <div class="container">
           <div class="asset">
             <video class="" controls>
               <source src="./resources/videos/thesis.mp4" type="video/mp4">
                 You browser does not support HTML5 video
             </video>
-            <div class="description">
+            <div class="description hide">
               <h1>It doesn't hurt to keep practicing</h1>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
           </div>
 
-          <div class="content">
-            <div class="dates fisma">
+          <div class="content hide">
+            <div class="thesis fisma">
               <div class="pic">
-                  <img src="./resources/images/thesis-fisma.jpg">
+                  <img src="./resources/images/thesis-fisma.jpg" alt="Thesis Fisma">
               </div>
               <div class="info">
                 <h3> Fisma </h3>
-                <p>Tue10/11 & Wed 10/12: 8am-3pm</p>
+                <h4>Tue10/11 & Wed 10/12: 8am-3pm</h4>
                 <span><a href="#">Read more</a></span>
               </div>
             </div>
-            <div class="dates now-and-then">
+            <div class="thesis now-and-then">
               <div class="pic">
-                  <img src="./resources/images/thesis-now-and-then.jpg">
+                  <img src="./resources/images/thesis-now-and-then.jpg" alt="Thesis now-and-then">
               </div>
               <div class="info">
                 <h3> Now-and-then </h3>
-                <p>Tue10/11 & Wed 10/12: 8am-3pm</p>
+                <h4>Tue10/11 & Wed 10/12: 8am-3pm</h4>
                 <span><a href="#">Read more</a></span>
               </div>
             </div>
