--- a/index.html
+++ b/index.html
@@ -16,120 +16,122 @@
     <header>
 
       <div class="logo">
-        <img src="./resources/images/ic-logo.svg" alt="Colmar Academy Company Logo">
-        <span><span class="name">COLMAR</span>ACADEMY</span>
+        <img  class="logo__picture"src="./resources/images/ic-logo.svg" alt="Colmar Academy Company Logo">
+        <span class="logo__text logo--red">COLMAR</span>
+        <span class="logo__text">ACADEMY</span>
       </div>
-      <nav class="nav header">
-        <span><a href="#">On campus</a></span>
-        <span><a href="#">Online</a></span>
-        <span><a href="#">For companies</a></span>
-        <span><a href="#">Sign in</a></span>
+      <nav class="nav nav--hide">
+        <span><a class="nav__link nav--padding" href="#">On campus</a></span>
+        <span><a class="nav__link nav--padding" href="#">Online</a></span>
+        <span><a class="nav__link nav--padding" href="#">For companies</a></span>
+        <span><a class="nav__link nav--padding" href="#">Sign in</a></span>
       </nav>
 
       <!-- nav mobile -->
 
-      <div class="icons">
-        <img a href="#" src="./resources/images/ic-logo.svg" alt="Colmar Academy Company Logo">
-        <img a href="#" src="./resources/images/ic-on-campus.svg" alt="Desk Icon">
-        <img a href="#" src="./resources/images/ic-online.svg" alt="Computer Monitor Icon">
-        <img a href="#" src="./resources/images/ic-login.svg" alt="Person Icon/Login">
+      <div class="icons icons--hide">
+        <img class="icon__svg" a href="#" src="./resources/images/ic-logo.svg" alt="Colmar Academy Company Logo">
+        <img class="icon__svg" a href="#" src="./resources/images/ic-on-campus.svg" alt="Desk Icon">
+        <img class="icon__svg" a href="#" src="./resources/images/ic-online.svg" alt="Computer Monitor Icon">
+        <img class="icon__svg" a href="#" src="./resources/images/ic-login.svg" alt="Person Icon/Login">
       </div>
 
     </header>
 
-    <!--1st gray/banner section  -->
+    <!--1st gray/banner section-->
 
-    <section class="section gray">
+    <section class="section section--gray">
 
-      <div class="asset">
-        <div class="image">
-          <img src="./resources/images/banner.jpg">
-        </div>
-      </div>
-        <div class="content border">
-          <div class="learn-something">
-            <h1 class="">Learn something new everyday</h1>
-            <h3 class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-            <button><a href="#" class="none">Start here</a></button>
+      <div class="col">
+
+          <div class="col__pic-container">
+            <img src="./resources/images/banner.jpg">
           </div>
-        </div>
+
+      </div>
+
+      <div class="col-s col--center-content"><!--s=small-->
+
+          <div class="col-s__banner">
+            <h1>Learn something new everyday</h1>
+            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+            <button class="btn"><a class="col-s-btn__link" href="#">Start here</a></button>
+          </div>
+
+      </div>
 
      </section>
 
     <!--1st white/information section-->
 
-    <section class="section white">
+    <section class="section section--white">
 
+        <div class="col hide">
 
-        <div class="asset hide">
-          <div class="image">
-            <img src="./resources/images/information-main.jpg">
-          </div>
-          <div class="description">
-            <h1>It doesn't hurt to keep practicing</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500.</p>
-            <span> Emanuel, Sr. Strategist at Hiring.com</span>
-          </div>
-         </div>
-
-        <div class="content">
-          <div class="events orientation">
-
-            <div class="pic">
-              <img class="desktop"src="./resources/images/information-orientation.jpg" alt="Students walking on campus in autumn">
-              <img class="mobile" src="./resources/images/information-orientation-mobile.jpg" alt="Students walking on campus in autumn">
-            </div>
-            <div class="info">
-              <h3> Orientation Date </h3>
-              <h4>Tue10/11 & Wed 10/12: 8am-3pm</h4>
-              <span><a href="#">Read more</a></span>
+            <div class="col__pic-container col__pic-container--hide">
+              <img src="./resources/images/information-main.jpg">
+              <div class="col__text">
+                <h1>It doesn't hurt to keep practicing</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500.</p>
+                <span class="col__name"> Emanuel, Sr. Strategist at Hiring.com</span>
+              </div>
             </div>
 
-          </div>
-          <div class="events campus">
+        </div>
 
-            <div class="pic">
-              <img class="desktop" src="./resources/images/information-campus.jpg" alt="Students studying in cafeteria">
-              <img class="mobile" src="./resources/images/information-campus-mobile.jpg" alt="Students studying in cafeteria">
+        <div class="col-s col--border">
+
+            <div class="col-s__container">
+              <div class="col-s__pic-container">
+                <img class="col-s__pic-desktop"src="./resources/images/information-orientation.jpg" alt="Students walking on campus in autumn">
+                <img class="col-s__pic-mobile" src="./resources/images/information-orientation-mobile.jpg" alt="Students walking on campus in autumn">
+              </div>
+              <div class="col-s__text">
+                <h3>Orientation Date </h3>
+                <h4>Tue10/11 & Wed 10/12: 8am-3pm</h4>
+                <span><a href="#">Read more</a></span>
+              </div>
             </div>
-            <div class="info">
+
+          <div class="col-s__container">
+            <div class="col-s__pic-container">
+              <img class="col-s__pic-desktop" src="./resources/images/information-campus.jpg" alt="Students studying in cafeteria">
+              <img class="col-s__pic-mobile" src="./resources/images/information-campus-mobile.jpg" alt="Students studying in cafeteria">
+            </div>
+            <div class="col-s__text">
               <h3>Our Campus</h3>
               <h4>Find which campus is colse by you</h4>
               <span><a href="#">Read more</a></span>
             </div>
-
           </div>
 
-          <div class="events guest">
-            <div class="pic">
-              <img class="desktop" src="./resources/images/information-guest-lecture.jpg" alt="Picture of lecturer Oliver Sack">
-              <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="Picture of lecturer Oliver Sack">
+          <div class="col-s__container col-s__container--margin-bottom">
+            <div class="col-s__pic-container">
+              <img class="col-s__pic-desktop" src="./resources/images/information-guest-lecture.jpg" alt="Picture of lecturer Oliver Sack">
+              <img class="col-s__pic-mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="Picture of lecturer Oliver Sack">
             </div>
-            <div class="info">
+            <div class="col-s__text">
               <h3>Our Guest Lecture</h3>
               <h4>Join a keynote with Oliver Sack about Music in medical treatment</h4>
               <span><a href="#">Read more</a></span>
             </div>
-
-            </div>
-
           </div>
-        </div>
 
+        </div>
     </section>
 
     <!--2nd gray/picture gallery section-->
 
-    <section class="section gray second">
+    <section class="section section--gray section--column">
 
-      <h2 class="headline">Start learning</h1>
+      <h2>Start learning</h2>
 
         <div class="courses">
-          <div class="picture-container">
-            <div class="picture">
+          <div class="courses__container">
+            <div class="courses__pic-container">
               <img src="./resources/images/course-software.jpg">
             </div>
-            <div class="course-info">
+            <div class="course__info">
               <h3>Software engineering</h3>
               <span class="course">Courses</span>
               <p> Web Development, Mobile</p>
@@ -137,24 +139,24 @@
             </div>
           </div>
 
-          <div class="picture-container center">
-            <div class="picture">
+          <div class="courses__container center">
+            <div class="courses__pic-container">
               <img src="./resources/images/course-computer-art.jpg">
             </div>
-            <div class="course-info">
+            <div class="course__info">
               <h3>Computer Art</h3>
-              <span class="course">Courses</span>
+              <span>Courses</span>
               <p> Imaging & Design, Web Design,</p>
               <p> Motion Grafphics & Visula Effects,</p>
               <p> Computer Animation <p>
             </div>
           </div>
 
-          <div class="picture-container">
-            <div class="picture">
+          <div class="courses__container">
+            <div class="courses__pic-container">
               <img src="./resources/images/course-design.jpg">
             </div>
-            <div class="course-info">
+            <div class="course__info">
               <h3>Design</h3>
               <span class="course">Courses</span>
               <p> User Experience Design, User</p>
@@ -162,11 +164,11 @@
             </div>
           </div>
 
-          <div class="picture-container">
-            <div class="picture">
+          <div class="courses__container">
+            <div class="courses__pic-container">
               <img src="./resources/images/course-data.jpg">
             </div>
-            <div class="course-info">
+            <div class="course__info">
               <h3>Data</h3>
               <span class="course">Courses</span>
               <p> Data Science, Big Data, SQL, Data</p>
@@ -174,11 +176,11 @@
             </div>
           </div>
 
-          <div class="picture-container center">
-            <div class="picture">
+          <div class="courses__container center">
+            <div class="courses__pic-container">
               <img src="./resources/images/course-business.jpg">
             </div>
-            <div class="course-info">
+            <div class="course__info">
               <h3>Business</h3>
               <span class="course">Courses</span>
               <p> Product Development, Business</p>
@@ -186,11 +188,11 @@
             </div>
           </div>
 
-          <div class="picture-container">
-            <div class="picture">
+          <div class="courses__container">
+            <div class="courses__pic-container">
               <img src="./resources/images/course-marketing.jpg">
             </div>
-            <div class="course-info">
+            <div class="course__info">
               <h3>Marketing</h3>
               <span class="course">Courses</span>
               <p> Analystics, Content Marketing,</p>
@@ -200,22 +202,22 @@
 
          </div>
          <div class="courses-mobile">
-           <div class="course-info">
+           <div class="course__info">
              <h3>Software engineering</h3>
            </div>
-           <div class="course-info">
+           <div class="course__info">
              <h3>Computer Art</h3>
            </div>
-           <div class="course-info">
+           <div class="course__info">
              <h3>Design</h3>
            </div>
-           <div class="course-info">
+           <div class="course__info">
              <h3>Data</h3>
            </div>
-           <div class="course-info">
+           <div class="course__info">
              <h3>Business</h3>
            </div>
-           <div class="course-info">
+           <div class="course__info">
              <h3>Marketing</h3>
            </div>
 
@@ -223,37 +225,39 @@
      </section>
 
     <!-- 2nd white/information section -->
-    <section class="section white second">
+    <section class="section section--white section--column">
 
-      <h2 class="headline2">Thesis exhibit</h1>
-        <div class="container">
-          <div class="asset">
-            <video class="" controls>
-              <source src="./resources/videos/thesis.mp4" type="video/mp4">
-                You browser does not support HTML5 video
-            </video>
-            <div class="description hide">
-              <h1>It doesn't hurt to keep practicing</h1>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      <h2>Thesis exhibit</h2>
+        <div class="section__container"> <!--flex: row. couldn't find out why necessary-->
+          <div class="col">
+            <div class="col__container">
+              <video class="col__video-container" controls>
+                <source src="./resources/videos/thesis.mp4" type="video/mp4">
+                  You browser does not support HTML5 video
+              </video>
+              <div class="col__text">
+                <h1>It doesn't hurt to keep practicing</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+              </div>
             </div>
           </div>
 
-          <div class="content hide">
-            <div class="thesis fisma">
-              <div class="pic">
-                  <img src="./resources/images/thesis-fisma.jpg" alt="Thesis Fisma">
+          <div class="col-s col--border">
+            <div class="col-s__container fisma">
+              <div class="col-s__pic-container">
+                  <img class="col-s__pic-desktop" src="./resources/images/thesis-fisma.jpg" alt="Thesis Fisma">
               </div>
-              <div class="info">
+              <div class="col-s__text">
                 <h3> Fisma </h3>
                 <h4>Tue10/11 & Wed 10/12: 8am-3pm</h4>
                 <span><a href="#">Read more</a></span>
               </div>
             </div>
-            <div class="thesis now-and-then">
-              <div class="pic">
-                  <img src="./resources/images/thesis-now-and-then.jpg" alt="Thesis now-and-then">
+            <div class="col-s__container now-and-then">
+              <div class="col-s__pic-container">
+                  <img class="col-s__pic-desktop" src="./resources/images/thesis-now-and-then.jpg" alt="Thesis now-and-then">
               </div>
-              <div class="info">
+              <div class="col-s__text">
                 <h3> Now-and-then </h3>
                 <h4>Tue10/11 & Wed 10/12: 8am-3pm</h4>
                 <span><a href="#">Read more</a></span>
@@ -268,9 +272,9 @@
 
     <footer>
       <span class="copyright">&#169; 2016 Colmar Academy. All rights reserved</span>
-      <nav class="nav footer">
-        <span><a href="#">Terms<a/></span>
-        <span><a href="#">Privacy</a></span>
+      <nav class="nav-footer">
+        <span><a class="nav-footer__link nav-footer--padding" href="#">Terms<a/></span>
+        <span><a class="nav-footer__link nav-footer--padding" href="#">Privacy</a></span>
       </nav>
     </footer>
 
