--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 
     <section class="section section--white">
 
-        <div class="col hide">
+        <div class="col">
 
             <div class="col__pic-container col__pic-container--hide">
-              <img src="./resources/images/information-main.jpg">
+                <img src="./resources/images/information-main.jpg">
               <div class="col__text">
                 <h1>It doesn't hurt to keep practicing</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500.</p>
@@ -122,7 +122,7 @@
 
     <!--2nd gray/picture gallery section-->
 
-    <section class="section section--gray section--column">
+    <section class="section section--gray section--column section--mobile">
 
       <h2>Start learning</h2>
 
@@ -139,7 +139,7 @@
             </div>
           </div>
 
-          <div class="courses__container center">
+          <div class="courses__container courses__container--center">
             <div class="courses__pic-container">
               <img src="./resources/images/course-computer-art.jpg">
             </div>
@@ -176,7 +176,7 @@
             </div>
           </div>
 
-          <div class="courses__container center">
+          <div class="courses__container courses__container--center">
             <div class="courses__pic-container">
               <img src="./resources/images/course-business.jpg">
             </div>
@@ -201,28 +201,8 @@
            </div>
 
          </div>
-         <div class="courses-mobile">
-           <div class="course__info">
-             <h3>Software engineering</h3>
-           </div>
-           <div class="course__info">
-             <h3>Computer Art</h3>
-           </div>
-           <div class="course__info">
-             <h3>Design</h3>
-           </div>
-           <div class="course__info">
-             <h3>Data</h3>
-           </div>
-           <div class="course__info">
-             <h3>Business</h3>
-           </div>
-           <div class="course__info">
-             <h3>Marketing</h3>
-           </div>
-
-         </div>
      </section>
+
 
     <!-- 2nd white/information section -->
     <section class="section section--white section--column">
@@ -235,14 +215,14 @@
                 <source src="./resources/videos/thesis.mp4" type="video/mp4">
                   You browser does not support HTML5 video
               </video>
-              <div class="col__text">
+              <div class="col__text col__text--hide">
                 <h1>It doesn't hurt to keep practicing</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
               </div>
             </div>
           </div>
 
-          <div class="col-s col--border">
+          <div class="col-s col--border col-s--hide">
             <div class="col-s__container fisma">
               <div class="col-s__pic-container">
                   <img class="col-s__pic-desktop" src="./resources/images/thesis-fisma.jpg" alt="Thesis Fisma">
