--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </div>
           <div class="text-box-courses">
             <h3>Software Engineering</h3>
-            <p>Courses</p>
+            <p>COURSES</p>
             <span> Web Development, Mobile</span>
             <span> Web Development, iOT, APIs</span>
           </div>
@@ -152,7 +152,7 @@
           </div>
           <div class="text-box-courses">
             <h3>Computer Art</h3>
-            <p>Courses</p>
+            <p>COURSES</p>
             <span> Imaging & Design, Web Design,</span>
             <span> Motion Grafphics & Visula Effects,</span>
             <span> Computer Animation <span>
@@ -165,7 +165,7 @@
           </div>
           <div class="text-box-courses">
             <h3>Design</h3>
-            <p>Courses</p>
+            <p>COURSES</p>
             <span> User Experience Design, User</span>
             <span> Research, Visual Design</span>
           </div>
@@ -177,9 +177,9 @@
           </div>
           <div class="text-box-courses">
             <h3>Data</h3>
-            <p class="text-box__courses">Courses</p>
-            <span class="text-box__course"> Data Science, Big Data, SQL, Data</span>
-            <span class="text-box__course"> Visualization</span>
+            <p>COURSES</p>
+            <span> Data Science, Big Data, SQL, Data</span>
+            <span> Visualization</span>
           </div>
         </div>
 
@@ -189,7 +189,7 @@
           </div>
           <div class="text-box-courses">
             <h3>Business</h3>
-            <p>Courses</p>
+            <p>COURSES</p>
             <span> Product Development, Business</span>
             <span> Development, Startup</span>
           </div>
@@ -201,7 +201,7 @@
           </div>
           <div class="text-box-courses">
             <h3>Marketing</h3>
-            <p>Courses</p>
+            <p>COURSES</p>
             <span> Analystics, Content Marketing,</span>
             <span> Mobile Marketing</span>
           </div>
