--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
       <div class="section--flexrow">
         <div class="col">
           <div class="col__container" role="region">
-            <video class="video-container" autoplay loop>
-              <source class="video" src="./resources/videos/thesis.mp4" type="video/mp4" alt="Video showing sunlight on a building while a day passes by">
+            <video class="video-container" autoplay loop alt="Video showing sunlight on a building while a day passes by">
+              <source class="video" src="./resources/videos/thesis.mp4" type="video/mp4">
                 You browser does not support HTML5 video
             </video>
             <div class="text-box text-box--hide" role="columnheader">
