--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       <div class="section--flexrow">
         <div class="col">
           <div class="col__container" role="region">
-            <video class="video-container" controls alt="Video showing sunlight on a building while a day passes by">
+            <video class="video-container" autoplay loop alt="Video showing sunlight on a building while a day passes by">
               <source class="video" src="./resources/videos/thesis.mp4" type="video/mp4">
                 You browser does not support HTML5 video
             </video>
