--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@
     <section class="section section--white section--column" role="main">
 
       <div class="text-box text-box--aligncenter" role="heading">
-        <h2>Thesis exhibit</h2>
+        <h2>Thesis exhibits</h2>
       </div>
 
       <div class="section--flexrow">
         <div class="col">
           <div class="col__container" role="region">
-            <video class="video-container" autoplay loop alt="Video showing sunlight on a building while a day passes by">
+            <video class="video-container" controls autoplay loop alt="Video showing sunlight on a building while a day passes by">
               <source class="video" src="./resources/videos/thesis.mp4" type="video/mp4">
                 You browser does not support HTML5 video
             </video>
